--- a/trex-ns.yaml
+++ b/trex-ns.yaml
@@ -3,3 +3,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: dpdk
+  labels:
+    pod-security.kubernetes.io/audit: privileged
+    pod-security.kubernetes.io/audit-version: v1.24
+    pod-security.kubernetes.io/warn: privileged
+    pod-security.kubernetes.io/warn-version: v1.24
+
